[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/start_menu/start_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/settings_menu/settings_menu.tscn" type="PackedScene" id=2]

[node name="start_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="start_menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 250.0
margin_top = 50.0
margin_right = -250.0
margin_bottom = -50.0

[node name="title" type="Label" parent="start_menu"]
margin_right = 1100.0
margin_bottom = 14.0
text = "Awesome Game"
align = 1

[node name="load_game" type="Button" parent="start_menu"]
margin_top = 18.0
margin_right = 1100.0
margin_bottom = 38.0
text = "Load Game"

[node name="new_game" type="Button" parent="start_menu"]
margin_top = 42.0
margin_right = 1100.0
margin_bottom = 62.0
text = "New Game"

[node name="settings" type="Button" parent="start_menu"]
margin_top = 66.0
margin_right = 1100.0
margin_bottom = 86.0
text = "Settings"

[node name="exit" type="Button" parent="start_menu"]
margin_top = 90.0
margin_right = 1100.0
margin_bottom = 110.0
text = "Exit"

[node name="settings_menu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="start_menu/load_game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="start_menu/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="start_menu/settings" to="." method="open_settings_menu"]
[connection signal="pressed" from="start_menu/exit" to="." method="_on_exit_pressed"]
